docs: put rule controller
